--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,7 @@ dependencies {
     api group: 'io.github.libktx', name: 'ktx-graphics', version: ktxVersion
     api group: 'io.github.libktx', name: 'ktx-log', version: ktxVersion
     api group: 'io.github.libktx', name: 'ktx-scene2d', version: ktxVersion
+
+    //Gson
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
