Configuração do método de salvamento por shared preferences; Separação das classes do framework para o seu módulo; correções de bugs

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,7 @@ dependencies {
 
     //Gson
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    //framework
+    implementation project(path: ':app:framework')
 }
