--- a/app/framework/build.gradle
+++ b/app/framework/build.gradle
@@ -3,6 +3,15 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 
+ext {
+    appName = "AndroidLibgdx"
+    gdxVersion = '1.11.0'
+    roboVMVersion = '2.3.6'
+    ashleyVersion = '1.7.0'
+    aiVersion = '1.8.0'
+    ktxVersion = '1.11.0-rc1'
+}
+
 android {
     compileSdk 32
 
@@ -27,14 +36,49 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
 }
 
 dependencies {
 
+    configurations {natives}
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.6.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //libgdx
+    implementation "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
+    natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi"
+    natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi-v7a"
+    natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-arm64-v8a"
+    natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-x86"
+    natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-x86_64"
+    implementation "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+    natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-armeabi"
+    natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-armeabi-v7a"
+    natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-arm64-v8a"
+    natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86"
+    natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86_64"
+
+    implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
+
+    //ktx
+    api group: 'io.github.libktx', name: 'ktx-actors', version: ktxVersion
+    api group: 'io.github.libktx', name: 'ktx-app', version: ktxVersion
+    api group: 'io.github.libktx', name: 'ktx-ashley', version: ktxVersion
+    api group: 'io.github.libktx', name: 'ktx-graphics', version: ktxVersion
+    api group: 'io.github.libktx', name: 'ktx-log', version: ktxVersion
+    api group: 'io.github.libktx', name: 'ktx-scene2d', version: ktxVersion
+
+    //Gson
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
