--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,9 @@ plugins {
 }
 
 ext {
-    appName = "AndroidLibgdx"
+    appName = "78Moov"
     gdxVersion = '1.11.0'
-    roboVMVersion = '2.3.6'
-    ashleyVersion = '1.7.0'
-    aiVersion = '1.8.0'
-    ktxVersion = '1.11.0-rc1'
+    ktxVersion = '1.11.0-SNAPSHOT'
 }
 
 android {
